--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -5,7 +5,7 @@
 			<ToolbarSpacer width="30px"/>
 			<Image class="sapUiSmallMarginTop sapUiSmallMarginBottom" src="img/logo_small.png"/>
 			<ToolbarSpacer/>
-			<Button class="ssmsHome-Header-Button sapUiSmallMarginEnd" type="Transparent" text="Login" press="onPressLogin"></Button>
+			<Button class="ssmsHome-Header-Button sapUiSmallMarginEnd" type="Transparent" icon="sap-icon://employee" text="{/displayName}" press="onPressLogin"></Button>
 		</Toolbar>
 		<Panel backgroundDesign="Transparent" class="ssmsHome-Panel">
 			<content>
