--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -1,39 +1,44 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="ssms.controller.Home" xmlns:semantic="sap.m.semantic"
-	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page showHeader="false" enableScrolling="false">
-		<Toolbar class="ssmsHeader">
-			<Image class="sapUiSmallMarginTop sapUiSmallMarginBottom sapUiSmallMarginBegin" src="img/logo_small.png"/>
-			<ToolbarSpacer/>
-			<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd" type="Emphasized" icon="sap-icon://employee" text="{/displayName}" press="onPressUser"></Button>
-		</Toolbar>
-		<Panel backgroundDesign="Transparent" class="ssmsHome-Panel">
-			<content>
-				<VBox>
-					<Title class="ssmsHome-Panel-Title" text="Share Session Management System"/>
-					<Text class="ssmsHome-Panel-Description" text="Here you can create and find the sessions you want"/>
-					<SearchField class="ssmsSearchField ssmsHome-Panel-SearchField" width="40%" placeholder="Search Session" search="onSearch" />
-				</VBox>
-			</content>
-		</Panel>
-		<HBox justifyContent="Center" class="sapUiMediumMarginTop">
-			<GenericTile id="createSession" class="sapUiSmallMargin" backgroundImage="img/1.jpg" frameType="TwoByOne" press="onPressTile">
-				<tileContent>
-					<TileContent footer="SSMS">
-						<content>
-							<NewsContent contentText="Create your own share session" subheader="Create Session"></NewsContent>
-						</content>
-					</TileContent>
-				</tileContent>
-			</GenericTile>
-			<GenericTile id="sessionList" class="sapUiSmallMargin" backgroundImage="img/2.jpg" frameType="TwoByOne" press="onPressTile">
-				<tileContent>
-					<TileContent footer="SSMS">
-						<content>
-							<NewsContent contentText="You can see all the existed sessions" subheader="Existed Sessions"></NewsContent>
-						</content>
-					</TileContent>
-				</tileContent>
-			</GenericTile>
-		</HBox>
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="ssms.controller.Home"
+	xmlns:semantic="sap.m.semantic" xmlns:html="http://www.w3.org/1999/xhtml">
+	<Page showHeader="false">
+		<subHeader>
+			<Toolbar class="ssmsHeader" design="Transparent">
+				<Image class="sapUiSmallMarginTop sapUiSmallMarginBottom sapUiSmallMarginBegin" src="img/logo_small.png"/>
+				<ToolbarSpacer/>
+				<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd" type="Emphasized" icon="sap-icon://employee" text="{/displayName}"
+					press="onPressUser"></Button>
+			</Toolbar>
+		</subHeader>
+		<content>
+			<Panel backgroundDesign="Transparent" class="ssmsHome-Panel">
+				<content>
+					<VBox>
+						<Title class="ssmsHome-Panel-Title" text="Share Session Management System"/>
+						<Text class="ssmsHome-Panel-Description" text="Here you can create and find the sessions you want"/>
+						<SearchField class="ssmsSearchField ssmsHome-Panel-SearchField" width="40%" placeholder="Search Session" search="onSearch"/>
+					</VBox>
+				</content>
+			</Panel>
+			<HBox justifyContent="Center" class="sapUiMediumMarginTop">
+				<GenericTile id="createSession" class="sapUiSmallMargin" backgroundImage="img/1.jpg" frameType="TwoByOne" press="onPressTile">
+					<tileContent>
+						<TileContent footer="SSMS">
+							<content>
+								<NewsContent contentText="Create your own share session" subheader="Create Session"></NewsContent>
+							</content>
+						</TileContent>
+					</tileContent>
+				</GenericTile>
+				<GenericTile id="sessionList" class="sapUiSmallMargin" backgroundImage="img/2.jpg" frameType="TwoByOne" press="onPressTile">
+					<tileContent>
+						<TileContent footer="SSMS">
+							<content>
+								<NewsContent contentText="You can see all the existed sessions" subheader="Existed Sessions"></NewsContent>
+							</content>
+						</TileContent>
+					</tileContent>
+				</GenericTile>
+			</HBox>
+		</content>
 	</Page>
 </mvc:View>
