--- a/webapp/view/Header.fragment.xml
+++ b/webapp/view/Header.fragment.xml
@@ -1,10 +1,9 @@
 <core:FragmentDefinition xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:ssmsLogo="ssms.control.logo" controllerName="ssms.controller.Header">
 	<Toolbar class="ssmsHeader" design="Transparent">
 		<Image class="sapUiSmallMarginTop sapUiSmallMarginBottom sapUiMediumMarginBegin" src="img/logo_small.png" press="onPressLogo" />
-		<!--<ssmsLogo:Logo pressLogo="onPressLogo" />-->
 		<ToolbarSpacer/>
 		<SearchField class="ssmsSearchField" width="20%" placeholder="Search Session" search="onHeaderSearch"/>
-		<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd sapUiMediumMarginBegin" type="Emphasized" icon="sap-icon://employee" text="{/displayName}"
+		<Button class="ssmsEmphasizedButton sapUiSmallMarginEnd sapUiMediumMarginBegin" type="Emphasized" icon="sap-icon://employee" text="{UserModel>/displayName}"
 			press="onPressUser"></Button>
 	</Toolbar>
 </core:FragmentDefinition>
